[package]
name = "wccloud-web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio="1"
actix-web = { version = "4", default-features = false, features = [
    "macros",
    "compress-brotli",
    "compress-gzip",
    "cookies",
    "http2", ] }
actix-multipart="0"
nacos-sdk = { version = "0.3", features = ["default"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1"
#rbs = { version = "4.5" }
#rbatis = '4.5.21'
#rbdc-mysql = { version = "4.5", default-features = false, features = ["tls-native-tls"] }

fastdate = { version = "0.3" }
chrono="0"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spaceflake = "1"

redis = {version =  "0",features = ["tokio-comp","json"]  }
redis_pool = "0"
xor-str="*"

minio= {git = "https://github.com/minio/minio-rs.git" }
futures-util = "0.3.30"